Changed layout of mobile+desktop-version

--- a/code/index.html
+++ b/code/index.html
@@ -46,104 +46,105 @@
       </p>
       <button class="main-button">Read more</button>
     </section>
-
-    <div class="small-news">
-      <h3>Apples for days</h3>
-      <div class="photo-display">
-        <img src="./assets/apples.JPG" alt="Green apples next to a pond">
-        <p class="caption">Photo by Erika Wernbro</p>
+    <section class="small-news-section">
+      <div class="small-news">
+        <h3>Apples for days</h3>
+        <div class="photo-display">
+          <img src="./assets/apples.JPG" alt="Green apples next to a pond">
+          <p class="caption">Photo by Erika Wernbro</p>
+        </div>
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+        <div class="button-div">
+          <button>Read more</button>
+        </div>
       </div>
-      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button-div">
-        <button>Read more</button>
+      <div class="small-news">
+        <h3>The burger battle settled</h3>
+        <div class="photo-display"> 
+          <img src="./assets/burger-delfina-cocciardi-unsplash.jpg" alt="Veggie burger">
+          <p class="caption">Photo by <a href="https://unsplash.com/@dcocciardi?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Delfina Cocciardi</a> on <a href="https://unsplash.com/photos/burger-with-lettuce-and-tomato-NDPBK-d-03M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+        </div>
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+        <div class="button-div">
+          <button>Read more</button>
+        </div>
       </div>
-    </div>
-    <div class="small-news">
-      <h3>The burger battle settled</h3>
-      <div class="photo-display"> 
-        <img src="./assets/burger-delfina-cocciardi-unsplash.jpg" alt="Veggie burger">
-        <p class="caption">Photo by <a href="https://unsplash.com/@dcocciardi?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Delfina Cocciardi</a> on <a href="https://unsplash.com/photos/burger-with-lettuce-and-tomato-NDPBK-d-03M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+      <div class="small-news">
+        <h3>She made cheesecake cheeseless</h3>
+        <div class="photo-display">  
+          <img src="./assets/baker-pexels-anna-shvets.jpg" alt="Baker with her pastries">
+          <p class="caption">
+            Photo by Anna Shvets on <a href="https://www.pexels.com/sv-se/foto/mat-kvinna-leende-arbete-5964621/">Pexels</a>
+          </p>
+        </div>
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+        <div class="button-div">
+          <button>Read more</button>
+        </div>
       </div>
-      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button-div">
-        <button>Read more</button>
-      </div>
-    </div>
-    <div class="small-news">
-      <h3>She made cheesecake cheeseless</h3>
-      <div class="photo-display">  
-        <img src="./assets/baker-pexels-anna-shvets.jpg" alt="Baker with her pastries">
-        <p class="caption">
-          Photo by Anna Shvets on <a href="https://www.pexels.com/sv-se/foto/mat-kvinna-leende-arbete-5964621/">Pexels</a>
+      <div class="small-news">
+        <h3>
+          Tofu takes the train
+        </h3>
+        <div class="photo-display">
+          <img src="./assets/train-pexels-brett-sayles.jpg" alt="Union Pacific train on its tracks">
+          <p class="caption">
+            Photo by Brett Sayles on <a href="https://www.pexels.com/sv-se/foto/tag-fordon-jarnvag-jarnvagsspar-981306/">Pexels</a>
+          </p>
+        </div>
+        <p>
+          Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.
         </p>
+        <div class="button-div">
+          <button>Read more</button>
+        </div>
       </div>
-      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button-div">
-        <button>Read more</button>
+      <div class="small-news">
+        <h3>Beetroots back in season</h3>
+        <div class="photo-display">
+          <img src="./assets/beetroot-emma-jane-hobden-unsplash.jpg" alt="Beet lying on a table">
+          <p class="caption">Photo by <a href="https://unsplash.com/@emmalejane?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Emma-Jane Hobden</a> on <a href="https://unsplash.com/photos/green-and-red-chili-peppers-lFxgx7Snyfw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+          </p>
+        </div>
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+        <div class="button-div">
+          <button>Read more</button>
+        </div>
       </div>
-    </div>
-    <div class="small-news">
-      <h3>
-        Tofu takes the train
-      </h3>
-      <div class="photo-display">
-        <img src="./assets/train-pexels-brett-sayles.jpg" alt="Union Pacific train on its tracks">
-        <p class="caption">
-          Photo by Brett Sayles on <a href="https://www.pexels.com/sv-se/foto/tag-fordon-jarnvag-jarnvagsspar-981306/">Pexels</a>
-        </p>
+      <div class="small-news">
+        <h3>Growing friendships</h3>
+        <div class="photo-display">
+          <img src="./assets/potatoes.jpg" alt="Growing potato plants">
+          <p class="caption">Photo by Erika Wernbro</p>
+        </div>
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+        <div class="button-div">
+          <button>Read more</button>
+        </div>
       </div>
-      <p>
-        Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.
-      </p>
-      <div class="button-div">
-        <button>Read more</button>
+      <div class="small-news">
+        <h3>Fake fish is here to stay</h3>
+        <div class="photo-display">
+          <img src="./assets/salmon-bowl-louis-hansel-unsplash.jpg" alt="Poké bowl">
+          <p class="caption">Photo by <a href="https://unsplash.com/@louishansel?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Louis Hansel</a> on <a href="https://unsplash.com/photos/cooked-food-phEaeqe555M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+          </p>
+        </div>
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+        <div class="button-div">
+          <button>Read more</button>
+        </div>
       </div>
-    </div>
-    <div class="small-news">
-      <h3>Beetroots back in season</h3>
-      <div class="photo-display">
-        <img src="./assets/beetroot-emma-jane-hobden-unsplash.jpg" alt="Beet lying on a table">
-        <p class="caption">Photo by <a href="https://unsplash.com/@emmalejane?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Emma-Jane Hobden</a> on <a href="https://unsplash.com/photos/green-and-red-chili-peppers-lFxgx7Snyfw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-        </p>
+      <div class="small-news">
+        <h3>The tiniest tomatoes</h3>
+        <div class="photo-display">
+          <img src="./assets/tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+          <p class="caption">Photo by Erika Wernbro</p>
+        </div>
+        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+        <div class="button-div">
+          <button>Read more</button>
+        </div>
       </div>
-      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button-div">
-        <button>Read more</button>
-      </div>
-    </div>
-    <div class="small-news">
-      <h3>Growing friendships</h3>
-      <div class="photo-display">
-        <img src="./assets/potatoes.jpg" alt="Growing potato plants">
-        <p class="caption">Photo by Erika Wernbro</p>
-      </div>
-      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button-div">
-        <button>Read more</button>
-      </div>
-    </div>
-    <div class="small-news">
-      <h3>Fake fish is here to stay</h3>
-      <div class="photo-display">
-        <img src="./assets/salmon-bowl-louis-hansel-unsplash.jpg" alt="Poké bowl">
-        <p class="caption">Photo by <a href="https://unsplash.com/@louishansel?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Louis Hansel</a> on <a href="https://unsplash.com/photos/cooked-food-phEaeqe555M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-        </p>
-      </div>
-      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button-div">
-        <button>Read more</button>
-      </div>
-    </div>
-    <div class="small-news">
-      <h3>The tiniest tomatoes</h3>
-      <div class="photo-display">
-        <img src="./assets/tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
-        <p class="caption">Photo by Erika Wernbro</p>
-      </div>
-      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button-div">
-        <button>Read more</button>
-      </div>
-    </div>
+    </section>
   </body>
 </html>
