--- a/code/index.html
+++ b/code/index.html
@@ -50,7 +50,7 @@
   <script>
     const togglebtn = document.querySelector('.toggle_btn')
     const togglebtnIcon = document.querySelector('.toggle_btn i')
-    const dropDownMenu = document.querySelector('.propdown_menu')
+    const dropDownMenu = document.querySelector('.dropdown_menu')
 
     togglebtn.onclick = function () {
       dropDownMenu.classList.toggle('open')
@@ -94,6 +94,26 @@
     </div>
 
     <div class="grid-item"><img src="./Images/houseofshade_1.jpg" alt="drag queen at a party">
+      <li><a href="The Parties">The Parties</a></li>
+    </div>
+
+    <div class="grid-item"><img src="./Images/houseofshade_3.jpg" alt="drag queen at a party">
+      <li><a href="The Parties">The Parties</a></li>
+    </div>
+
+    <div class="grid-item"><img src="./Images/houseofshade_6.jpg" alt="drag queen at a party">
+      <li><a href="The Parties">The Parties</a></li>
+    </div>
+
+    <div class="grid-item"><img src="./Images/houseofshade_11.jpg" alt="drag queen at a party">
+      <li><a href="The Parties">The Parties</a></li>
+    </div>
+
+    <div class="grid-item"><img src="./Images/houseofshade_4.jpg" alt="drag queen at a party">
+      <li><a href="The Parties">The Parties</a></li>
+    </div>
+
+    <div class="grid-item"><img src="./Images/houseofshade_12.jpg" alt="drag queen at a party">
       <li><a href="The Parties">The Parties</a></li>
     </div>
 
