Worked with styling in heading

--- a/code/index.html
+++ b/code/index.html
@@ -14,17 +14,19 @@
   <body>
     <!-- Header -->
     <header>
-      <img class="logo" src="./assets/salad-outline.png" alt="logo with picture of a salad bowl">
-      <div> 
-        <h1>Veggie News</h1>
-        <p class="site-subtitle">- your source to the latest in veggie eating!</p>
+      <div class="header-content">
+        <img class="logo" src="./assets/salad-outline.png" alt="logo with picture of a salad bowl">
+        <div class="title-div"> 
+          <h1 class="main-title">Veggie News</h1>
+          <p class="main-subtitle">- your source to the latest in veggie eating!</p>
+        </div>
+        <nav class="main-menu">
+          <div class="nav-link"><a href="#">Take me home</a></div>
+          <div class="nav-link"><a href="#">Get that protein!</a></div>       
+          <div class="nav-link"><a href="#">Fruits & veg</a></div>         
+          <div class="nav-link"><a href="#">Yummy desserts</a></div>
+        </nav>
       </div>
-      <nav class="main-menu">
-        <a href="#">Take me home</a>
-        <a href="#">Get that protein!</a>
-        <a href="#">Fruits & veg</a>
-        <a href="#">Yummy desserts</a>
-      </nav>
     </header>
     
     <!-- Big news -->
