Basic HTML structure added

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,128 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
   <head>
     <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Featherington</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <div class="grid-wrapper">
+      <header class="header">
+        <img
+          class="header__logo"
+          alt="The Featherington"
+          src="/code/assets/featherington-logo.svg"
+        />
+        <!-- Some kind of logo and navbar -->
+        <nav class="header__nav">
+          <a href="https://google.se">Latest news</a>
+          <a href="https://google.se">Top stories</a>
+          <a href="https://google.se">About us</a>
+          <a href="https://google.se">Contact</a>
+          <a class="button" href="https://google.se">Subscribe</a>
+        </nav>
+      </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+      <section class="hero">
+        <div class="hero__content">
+          <h1>
+            Mysteries of the Hummingbird migration: New insights from recent
+            studies
+          </h1>
+        </div>
+        <div class="hero__image">
+          <img
+            src="/code/assets/hummingbird-green-ecuador.jpg"
+            alt="Green hummingbird from Ecuador"
+          />
+        </div>
+      </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+      <div class="card-item">
+        <div class="card-item__image">
+          <img
+            src="/code/assets/hummingbird-green-ecuador.jpg"
+            alt="Green hummingbird from Ecuador"
+          />
+        </div>
+        <div class="card-item__content">
+          <h2>
+            The Secret Life of Puffins: New Discoveries in Coastal Habitats
+          </h2>
+          <p>
+            Puffins, with their colorful beaks and charming appearance, are more
+            than just iconic seabirds. Recent studies along coastal cliffs are
+            revealing surprising behaviors and adaptations that have remained
+            hidden until now. Explore what scientists are learning about these
+            fascinating birds and their changing environments.
+          </p>
+        </div>
+      </div>
+      <div class="card-item">
+        <div class="card-item__image">
+          <img
+            src="/code/assets/hummingbird-green-ecuador.jpg"
+            alt="Green hummingbird from Ecuador"
+          />
+        </div>
+        <div class="card-item__content">
+          <h2>
+            Eagles on the Rise: The Comeback of North America's Majestic
+            Predators
+          </h2>
+          <p>
+            Once endangered, eagle populations in North America are making a
+            remarkable recovery. Conservation efforts have played a critical
+            role, and recent surveys show encouraging trends. Delve into how
+            these majestic birds of prey are reclaiming their skies and what
+            challenges still lie ahead.
+          </p>
+        </div>
+      </div>
+      <div class="card-item">
+        <div class="card-item__image">
+          <img
+            src="/code/assets/hummingbird-green-ecuador.jpg"
+            alt="Green hummingbird from Ecuador"
+          />
+        </div>
+        <div class="card-item__content">
+          <h2>
+            Songbird Serenade: The Impact of Urbanization on Their Melodies
+          </h2>
+          <p>
+            Songbirds bring life to our mornings with their melodies, but
+            urbanization is changing the way they sing. New research is
+            exploring how city life is affecting their songs and communication.
+            Learn about the adjustments these birds are making to thrive in an
+            increasingly noisy world.
+          </p>
+        </div>
+      </div>
+      <div class="card-item">
+        <div class="card-item__image">
+          <img
+            src="/code/assets/hummingbird-green-ecuador.jpg"
+            alt="Green hummingbird from Ecuador"
+          />
+        </div>
+        <div class="card-item__content">
+          <h2>
+            Penguin Populations in Peril: Climate Change Threatens Antarctica’s
+            Iconic Birds
+          </h2>
+          <p>
+            Penguins are facing growing threats as climate change alters their
+            Antarctic habitats. Melting ice and shifting food sources are
+            impacting their populations in ways that scientists are only
+            beginning to understand. Discover the latest findings on how these
+            beloved birds are coping with a rapidly changing environment.
+          </p>
+        </div>
+      </div>
+
+      <footer>My footer</footer>
+    </div>
   </body>
 </html>
