Added more HTML - meta info, etc

--- a/code/index.html
+++ b/code/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="grid-wrapper">
+    <div class="grid-wrapper grid-wrapper--main">
       <header class="header">
         <img
           class="header__logo"
@@ -30,6 +30,16 @@
             Mysteries of the Hummingbird migration: New insights from recent
             studies
           </h1>
+          <p class="text-large">
+            Hummingbirds undertake remarkable migratory journeys that have long
+            puzzled researchers. Recent studies are beginning to uncover the
+            details of their travel routes and the factors that guide them.
+          </p>
+          <div class="article-meta">
+            <a class="article-meta__category">Exotic birds</a>
+            <span class="divider-bullet">∙</span>
+            <p class="inline">6 min read</p>
+          </div>
         </div>
         <div class="hero__image">
           <img
@@ -39,88 +49,115 @@
         </div>
       </section>
 
-      <div class="card-item">
-        <div class="card-item__image">
-          <img
-            src="/code/assets/hummingbird-green-ecuador.jpg"
-            alt="Green hummingbird from Ecuador"
-          />
+      <section class="articles grid-container">
+        <h2>Latest news</h2>
+        <div class="grid-wrapper">
+          <div class="card-item">
+            <div class="card-item__image">
+              <img
+                src="/code/assets/hummingbird-green-ecuador.jpg"
+                alt="Green hummingbird from Ecuador"
+              />
+            </div>
+            <div class="card-item__content">
+              <h3>
+                The Secret Life of Puffins: New Discoveries in Coastal Habitats
+              </h3>
+              <p>
+                Puffins, with their colorful beaks and charming appearance, are
+                more than just iconic seabirds. Recent studies along coastal
+                cliffs are revealing surprising behaviors and adaptations that
+                have remained hidden until now. Explore what scientists are
+                learning about these fascinating birds and their changing
+                environments.
+              </p>
+              <div class="article-meta">
+                <a class="article-meta__category">Exotic birds</a>
+                <span class="divider-bullet">∙</span>
+                <p class="inline">6 min read</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="card-item__image">
+              <img
+                src="/code/assets/hummingbird-green-ecuador.jpg"
+                alt="Green hummingbird from Ecuador"
+              />
+            </div>
+            <div class="card-item__content">
+              <h3>
+                Eagles on the Rise: The Comeback of North America's Majestic
+                Predators
+              </h3>
+              <p>
+                Once endangered, eagle populations in North America are making a
+                remarkable recovery. Conservation efforts have played a critical
+                role, and recent surveys show encouraging trends. Delve into how
+                these majestic birds of prey are reclaiming their skies and what
+                challenges still lie ahead.
+              </p>
+              <div class="article-meta">
+                <a class="article-meta__category">Exotic birds</a>
+                <span class="divider-bullet">∙</span>
+                <p class="inline">6 min read</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="card-item__image">
+              <img
+                src="/code/assets/hummingbird-green-ecuador.jpg"
+                alt="Green hummingbird from Ecuador"
+              />
+            </div>
+            <div class="card-item__content">
+              <h3>
+                Songbird Serenade: The Impact of Urbanization on Their Melodies
+              </h3>
+              <p>
+                Songbirds bring life to our mornings with their melodies, but
+                urbanization is changing the way they sing. New research is
+                exploring how city life is affecting their songs and
+                communication. Learn about the adjustments these birds are
+                making to thrive in an increasingly noisy world.
+              </p>
+              <div class="article-meta">
+                <a class="article-meta__category">Exotic birds</a>
+                <span class="divider-bullet">∙</span>
+                <p class="inline">6 min read</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="card-item__image">
+              <img
+                src="/code/assets/hummingbird-green-ecuador.jpg"
+                alt="Green hummingbird from Ecuador"
+              />
+            </div>
+            <div class="card-item__content">
+              <h3>
+                Penguin Populations in Peril: Climate Change Threatens
+                Antarctica’s Iconic Birds
+              </h3>
+              <p>
+                Penguins are facing growing threats as climate change alters
+                their Antarctic habitats. Melting ice and shifting food sources
+                are impacting their populations in ways that scientists are only
+                beginning to understand. Discover the latest findings on how
+                these beloved birds are coping with a rapidly changing
+                environment.
+              </p>
+              <div class="article-meta">
+                <a class="article-meta__category">Exotic birds</a>
+                <span class="divider-bullet">∙</span>
+                <p class="inline">6 min read</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="card-item__content">
-          <h2>
-            The Secret Life of Puffins: New Discoveries in Coastal Habitats
-          </h2>
-          <p>
-            Puffins, with their colorful beaks and charming appearance, are more
-            than just iconic seabirds. Recent studies along coastal cliffs are
-            revealing surprising behaviors and adaptations that have remained
-            hidden until now. Explore what scientists are learning about these
-            fascinating birds and their changing environments.
-          </p>
-        </div>
-      </div>
-      <div class="card-item">
-        <div class="card-item__image">
-          <img
-            src="/code/assets/hummingbird-green-ecuador.jpg"
-            alt="Green hummingbird from Ecuador"
-          />
-        </div>
-        <div class="card-item__content">
-          <h2>
-            Eagles on the Rise: The Comeback of North America's Majestic
-            Predators
-          </h2>
-          <p>
-            Once endangered, eagle populations in North America are making a
-            remarkable recovery. Conservation efforts have played a critical
-            role, and recent surveys show encouraging trends. Delve into how
-            these majestic birds of prey are reclaiming their skies and what
-            challenges still lie ahead.
-          </p>
-        </div>
-      </div>
-      <div class="card-item">
-        <div class="card-item__image">
-          <img
-            src="/code/assets/hummingbird-green-ecuador.jpg"
-            alt="Green hummingbird from Ecuador"
-          />
-        </div>
-        <div class="card-item__content">
-          <h2>
-            Songbird Serenade: The Impact of Urbanization on Their Melodies
-          </h2>
-          <p>
-            Songbirds bring life to our mornings with their melodies, but
-            urbanization is changing the way they sing. New research is
-            exploring how city life is affecting their songs and communication.
-            Learn about the adjustments these birds are making to thrive in an
-            increasingly noisy world.
-          </p>
-        </div>
-      </div>
-      <div class="card-item">
-        <div class="card-item__image">
-          <img
-            src="/code/assets/hummingbird-green-ecuador.jpg"
-            alt="Green hummingbird from Ecuador"
-          />
-        </div>
-        <div class="card-item__content">
-          <h2>
-            Penguin Populations in Peril: Climate Change Threatens Antarctica’s
-            Iconic Birds
-          </h2>
-          <p>
-            Penguins are facing growing threats as climate change alters their
-            Antarctic habitats. Melting ice and shifting food sources are
-            impacting their populations in ways that scientists are only
-            beginning to understand. Discover the latest findings on how these
-            beloved birds are coping with a rapidly changing environment.
-          </p>
-        </div>
-      </div>
+      </section>
 
       <footer>My footer</footer>
     </div>
