--- a/code/index.html
+++ b/code/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Change the title below -->
   <title>the Chai magazine</title>
   <link rel="stylesheet" href="./style.css" />
