--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Crypto Financial Solutions</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Montserrat:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <nav class="top-menu">
+        <div class="title-bar">
+          <img src="./assets/Y2k-Star-PNG.png" class="logo" />
+          <h1>Weekly Stargaze</h1>
+        </div>
+        <ul class="nav-list">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#invest">Invest</a></li>
+          <li><a href="#community">Community</a></li>
+          <li><a href="#blog">Blog</a></li>
+          <li><a href="#membership">Membership</a></li>
+        </ul>
+      </nav>
+
+      <section class="hero">
+        <h1 class="hero-title">
+          Discover the Wonders of the Night Sky with Weekly Stargazing
+        </h1>
+        <p class="hero-subtitle">
+          Your go-to guide for celestial events, star charts, and stargazing
+          tips.
+        </p>
+        <a href="#" class="cta-button">Browse stargazing near you</a>
+      </section>
     </header>
-
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
-
-    <section class="">
-      <!-- The other news  -->
-    </section>
   </body>
 </html>
