added a button and wrote hej

--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+       <button>click me! hej</button>
     </header>
 
     <section class="big-news">
