Nu är grid ramverket på plats, och den är responsive

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,112 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Change the title below CHECK -->
+  <title>Babies - Focused on parents</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness CHECK -->
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+</head>
+
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <img src="assets/baby.png" alt="parent">
+
+    <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics#so_what_is_html">
+      HTML
+    </a>
+    <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics#what_is_css">
+      CSS
+    </a>
+    <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">
+      JavaScript
+    </a>
+
+  </header>
+
+  <section class="big-news picture">
+    <!-- The big news content -->
+
+    <img src="assets/flicka.jpg" alt="Flicka">
+
+  </section>
+
+
+  <section class="big-news content">
+    <h1>Big baby news</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt laudantium facilis assumenda
+      mollitiacupiditate nesciunt, iste dolore commodi. Alias voluptate architecto ipsum eum omnis odit quidem esse
+      voluptatibus velit ipsa.</p>
+
+  </section>
+
+  <section class="small-news 1">
+    <!-- The other news  -->
+
+    <img src="assets/baby.png" alt="Baby">
+    <h3>News</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+
+  </section>
+
+  <section class="small-news 2">
+    <img src="assets/baby.png" alt="Baby">
+    <h3>News</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+
+  </section>
+
+  <section class="small-news 3">
+    <img src="assets/baby.png" alt="Baby">
+    <h3>News</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+
+  </section>
+
+  <section class="small-news 4">
+    <img src="assets/baby.png" alt="Baby">
+    <h3>News</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+
+  </section>
+
+  <section class="small-news 5">
+    <img src="assets/baby.png" alt="Baby">
+    <h3>News</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+
+  </section>
+
+  <section class="small-news 6">
+    <img src="assets/baby.png" alt="Baby">
+    <h3>News</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+
+  </section>
+
+  <section class="small-news 7">
+    <img src="assets/baby.png" alt="Baby">
+    <h3>News</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+
+  </section>
+
+  <section class="small-news 8">
+    <img src="assets/baby.png" alt="Baby">
+    <h3>News</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+
+  </section>
+
+
+  <footer>
+    <h3>Denna sida är skapad av Emelie Nyberg Kedert</h3>
+  </footer>
+
+
+</body>
+
 </html>
