update - navbar, header and background

--- a/code/index.html
+++ b/code/index.html
@@ -10,10 +10,21 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+       <img src="" class="main-logo" alt="Logga">
+       <nav class="nav-desktop">
+          <ul>
+            <li class="nav-menu-item-desktop"></li>
+            <li class="nav-menu-item-desktop"></li>
+            <li class="nav-menu-item-desktop"></li>
+            <li class="nav-menu-item-desktop"></li>
+          </ul>
+       </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <h1 class="header-news-h1">Stick a fork in me - i'm done</h1>
+      <h3 class="header-news-h3">How to cook vegetables properly</h3>
     </section>
 
     <section class="">
