--- a/code/index.html
+++ b/code/index.html
@@ -10,13 +10,13 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-       <img src="" class="main-logo" alt="Logga">
+       <p class="main-logo"><span>V</span>egenews</p>
        <nav class="nav-desktop">
           <ul>
-            <li class="nav-menu-item-desktop"></li>
-            <li class="nav-menu-item-desktop"></li>
-            <li class="nav-menu-item-desktop"></li>
-            <li class="nav-menu-item-desktop"></li>
+            <li class="nav-menu-item-desktop">News</li>
+            <li class="nav-menu-item-desktop">About us</li>
+            <li class="nav-menu-item-desktop">Corses</li>
+            <li class="nav-menu-item-desktop btn-nav">Log in</li>
           </ul>
        </nav>
     </header>
