--- a/code/index.html
+++ b/code/index.html
@@ -5,44 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Featherington</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Display:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="grid-wrapper grid-wrapper--main">
-      <header class="header">
+      <header class="top-header grid-container">
         <img
-          class="header__logo"
+          class="top-header__logo"
           alt="The Featherington"
           src="/code/assets/featherington-logo.svg"
         />
         <!-- Some kind of logo and navbar -->
-        <nav class="header__nav">
-          <a href="https://google.se">Latest news</a>
-          <a href="https://google.se">Top stories</a>
-          <a href="https://google.se">About us</a>
-          <a href="https://google.se">Contact</a>
-          <a class="button" href="https://google.se">Subscribe</a>
+        <nav class="top-header__nav">
+          <ul>
+            <li><a href="https://google.se">Top stories</a></li>
+            <li><a href="https://google.se">About us</a></li>
+            <li><a href="https://google.se">Contact</a></li>
+            <li>
+              <a class="button" href="https://google.se"
+                ><span><span>Subscribe</span></span></a
+              >
+            </li>
+          </ul>
         </nav>
       </header>
 
-      <section class="hero">
+      <section class="hero grid-container-large">
         <div class="hero__content">
-          <h1>
-            Mysteries of the Hummingbird migration: New insights from recent
-            studies
-          </h1>
+          <div class="article-meta">
+            <a href="#category" class="article-meta__category">Exotic birds</a>
+            <span class="divider-bullet">∙</span>
+            <p class="inline">6 min read</p>
+          </div>
+          <h1>Mysteries of the Hummingbird migration uncovered</h1>
           <p class="text-large">
             Hummingbirds undertake remarkable migratory journeys that have long
             puzzled researchers. Recent studies are beginning to uncover the
             details of their travel routes and the factors that guide them.
           </p>
-          <div class="article-meta">
-            <a class="article-meta__category">Exotic birds</a>
-            <span class="divider-bullet">∙</span>
-            <p class="inline">6 min read</p>
-          </div>
+          <a class="button" href="#read-more"
+            ><span><span>Read full story</span></span></a
+          >
         </div>
         <div class="hero__image">
           <img
+            class="object-fit-cover"
             src="/code/assets/hummingbird-green-ecuador.jpg"
             alt="Green hummingbird from Ecuador"
           />
@@ -50,109 +62,184 @@
       </section>
 
       <section class="articles grid-container">
-        <h2>Latest news</h2>
+        <h2>Hot off the nest</h2>
         <div class="grid-wrapper">
           <div class="card-item">
             <div class="card-item__image">
               <img
-                src="/code/assets/hummingbird-green-ecuador.jpg"
-                alt="Green hummingbird from Ecuador"
+                class="border-radius-lg"
+                src="/code/assets/puffins.jpg"
+                alt="Two puffins on green grass"
               />
             </div>
             <div class="card-item__content">
               <h3>
-                The Secret Life of Puffins: New Discoveries in Coastal Habitats
+                The secret life of Puffins: New discoveries in coastal habitats
               </h3>
-              <p>
+              <p class="text-small">
                 Puffins, with their colorful beaks and charming appearance, are
                 more than just iconic seabirds. Recent studies along coastal
-                cliffs are revealing surprising behaviors and adaptations that
-                have remained hidden until now. Explore what scientists are
-                learning about these fascinating birds and their changing
-                environments.
+                cliffs are revealing surprising behaviors...
               </p>
-              <div class="article-meta">
-                <a class="article-meta__category">Exotic birds</a>
+              <div class="article-meta text-small">
+                <a href="#category" class="article-meta__category">Behavior</a>
                 <span class="divider-bullet">∙</span>
-                <p class="inline">6 min read</p>
+                <p class="inline">12 min read</p>
               </div>
             </div>
           </div>
           <div class="card-item">
             <div class="card-item__image">
               <img
-                src="/code/assets/hummingbird-green-ecuador.jpg"
-                alt="Green hummingbird from Ecuador"
+                class="border-radius-lg"
+                src="/code/assets/eagle.jpg"
+                alt="The head of an eagle"
               />
             </div>
             <div class="card-item__content">
               <h3>
-                Eagles on the Rise: The Comeback of North America's Majestic
-                Predators
+                Eagles on the rise: The comeback of North America's majestic
+                predators
               </h3>
-              <p>
+              <p class="text-small">
                 Once endangered, eagle populations in North America are making a
                 remarkable recovery. Conservation efforts have played a critical
-                role, and recent surveys show encouraging trends. Delve into how
-                these majestic birds of prey are reclaiming their skies and what
-                challenges still lie ahead.
+                role, and recent surveys show...
               </p>
-              <div class="article-meta">
-                <a class="article-meta__category">Exotic birds</a>
+              <div class="article-meta text-small">
+                <a href="#category" class="article-meta__category"
+                  >North America</a
+                >
                 <span class="divider-bullet">∙</span>
-                <p class="inline">6 min read</p>
+                <p class="inline">9 min read</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-item card-item--large border-radius-lg">
+            <div class="card-item__image">
+              <img
+                class="object-fit-cover"
+                src="/code/assets/flamingo.jpg"
+                alt="Songbird sitting on a branch"
+              />
+            </div>
+            <div class="card-item__content">
+              <h3>Understanding flamingo social behavior</h3>
+              <p>
+                Flamingos are renowned for their vibrant pink plumage and group
+                dynamics. Recent research has provided new insights into how
+                these birds form and maintain their large flocks, shedding light
+                on the social behaviors that play a crucial role in their
+                survival.
+              </p>
+              <div class="article-meta text-small">
+                <a href="#category" class="article-meta__category">Behavior</a>
+                <span class="divider-bullet">∙</span>
+                <p class="inline">4 min read</p>
               </div>
             </div>
           </div>
           <div class="card-item">
             <div class="card-item__image">
               <img
-                src="/code/assets/hummingbird-green-ecuador.jpg"
-                alt="Green hummingbird from Ecuador"
+                class="border-radius-lg"
+                src="/code/assets/penguin.jpg"
+                alt="Two penguins facing each other"
               />
             </div>
             <div class="card-item__content">
               <h3>
-                Songbird Serenade: The Impact of Urbanization on Their Melodies
+                Penguin populations in peril: Climate change threatens
+                Antarctica’s iconic birds
               </h3>
-              <p>
-                Songbirds bring life to our mornings with their melodies, but
-                urbanization is changing the way they sing. New research is
-                exploring how city life is affecting their songs and
-                communication. Learn about the adjustments these birds are
-                making to thrive in an increasingly noisy world.
-              </p>
-              <div class="article-meta">
-                <a class="article-meta__category">Exotic birds</a>
-                <span class="divider-bullet">∙</span>
-                <p class="inline">6 min read</p>
-              </div>
-            </div>
-          </div>
-          <div class="card-item">
-            <div class="card-item__image">
-              <img
-                src="/code/assets/hummingbird-green-ecuador.jpg"
-                alt="Green hummingbird from Ecuador"
-              />
-            </div>
-            <div class="card-item__content">
-              <h3>
-                Penguin Populations in Peril: Climate Change Threatens
-                Antarctica’s Iconic Birds
-              </h3>
-              <p>
+              <p class="text-small">
                 Penguins are facing growing threats as climate change alters
                 their Antarctic habitats. Melting ice and shifting food sources
-                are impacting their populations in ways that scientists are only
-                beginning to understand. Discover the latest findings on how
-                these beloved birds are coping with a rapidly changing
-                environment.
+                are impacting their populations in ways...
               </p>
-              <div class="article-meta">
-                <a class="article-meta__category">Exotic birds</a>
+              <div class="article-meta text-small">
+                <a href="#category" class="article-meta__category"
+                  >Climate change</a
+                >
                 <span class="divider-bullet">∙</span>
-                <p class="inline">6 min read</p>
+                <p class="inline">7 min read</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="card-item__image">
+              <img
+                class="border-radius-lg"
+                src="/code/assets/warbler.jpg"
+                alt="Warbler sitting on a branch"
+              />
+            </div>
+            <div class="card-item__content">
+              <h3>
+                The secret songs of warblers: Decoding their complex
+                communication
+              </h3>
+              <p class="text-small">
+                Warblers, with their intricate songs, are not just beautiful to
+                listen to—they’re also communicating in ways we’re only
+                beginning to understand. New studies are revealing...
+              </p>
+              <div class="article-meta text-small">
+                <a href="#category" class="article-meta__category"
+                  >Communication</a
+                >
+                <span class="divider-bullet">∙</span>
+                <p class="inline">12 min read</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="card-item__image">
+              <img
+                class="border-radius-lg"
+                src="/code/assets/owl.jpg"
+                alt="The head of an owl"
+              />
+            </div>
+            <div class="card-item__content">
+              <h3>
+                Owls in the dark: How these nocturnal hunters navigate the night
+              </h3>
+              <p class="text-small">
+                Owls are masters of the night, with their silent flight and keen
+                senses. Scientists are uncovering new details about how these
+                nocturnal predators hunt in complete...
+              </p>
+              <div class="article-meta text-small">
+                <a href="#category" class="article-meta__category">Movement</a>
+                <span class="divider-bullet">∙</span>
+                <p class="inline">9 min read</p>
+              </div>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="card-item__image">
+              <img
+                class="border-radius-lg"
+                src="/code/assets/songbird.jpg"
+                alt="Songbird sitting on a branch"
+              />
+            </div>
+            <div class="card-item__content">
+              <h3>
+                Songbird serenade: The impact of urbanization on their melodies
+              </h3>
+              <p class="text-small">
+                Songbirds bring life to our mornings with their melodies, but
+                urbanization is changing the way they sing. New research is
+                exploring how city life is affecting their songs...
+              </p>
+              <div class="article-meta text-small">
+                <a href="#category" class="article-meta__category"
+                  >Communication</a
+                >
+                <span class="divider-bullet">∙</span>
+                <p class="inline">4 min read</p>
               </div>
             </div>
           </div>
