--- a/code/index.html
+++ b/code/index.html
@@ -13,18 +13,26 @@
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
-    <img src="assets/baby.png" alt="parent">
+    <img class="logo-picture" src="assets/baby.png" alt="parent">
 
-    <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics#so_what_is_html">
-      HTML
-    </a>
-    <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics#what_is_css">
-      CSS
-    </a>
-    <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">
-      JavaScript
-    </a>
-
+    <ul>
+      <a class="header-link 1"
+        href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics#so_what_is_html">
+        HTML
+      </a>
+      <a class="header-link 2"
+        href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics#what_is_css">
+        CSS
+      </a>
+      <a class="header-link 3"
+        href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">
+        JavaScript
+      </a>
+      <a class="header-link 4"
+        href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">
+        Home
+      </a>
+    </ul>
   </header>
 
   <section class="big-news picture">
@@ -40,6 +48,7 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt laudantium facilis assumenda
       mollitiacupiditate nesciunt, iste dolore commodi. Alias voluptate architecto ipsum eum omnis odit quidem esse
       voluptatibus velit ipsa.</p>
+    <button>click</button>
 
   </section>
 
